# term-todo-list

./: .gitignore  CMakeLists.txt  README.md  clang-build.sh  gcc-build.sh  main.cpp  run-tests.sh
include/: Command.hpp  Task.hpp  TodoList.hpp  cli.hpp
include/Parser/: parse.hpp  read.hpp  unexpected_end_of_tokens.hpp  unexpected_token.hpp
include/Parser/Arg/: Arg.hpp  Date.hpp  LongString.hpp  Optional.hpp  Predicate.hpp  Tuple.hpp  VarArray.hpp
include/Parser/Error/: cmd_not_found.hpp
include/Tokenizer/: Iterator.hpp  Matcher.hpp  iter_pair.hpp
include/Tokenizer/Token/: Token.hpp
include/Tokenizer/Token/Delimiter/: Delimiter.hpp  define_delimiter.hpp
include/Tokenizer/Token/Delimiter/Types/: Compare.hpp  Empty.hpp  Punctuation.hpp  Star.hpp
include/Tokenizer/Token/Word/: Word.hpp  define_keyword.hpp
include/Tokenizer/Token/Word/Types/: Bool.hpp  Keyword.hpp  LinkKeyword.hpp  Number.hpp  ReferenceKeyword.hpp  String.hpp
include/errors/: errors.hpp  unexpected_token.hpp  unexpected_tokens_after_command.hpp
include/serialization/: deserialize.hpp  net_integral.hpp  serialization.hpp  serialize.hpp
include/traits/: has_begin_end.hpp  has_data.hpp  has_size.hpp  has_trivially_copyable_value_type.hpp  has_value_type.hpp  is_deserializable.hpp  is_equals_valid.hpp  is_greater_or_equal_valid.hpp  is_greater_valid.hpp  is_less_or_equal_valid.hpp  is_less_valid.hpp  is_matchable.hpp  is_named.hpp  is_pair.hpp  is_parsable.hpp  is_range_constructible.hpp  is_resizable.hpp  is_serializable.hpp  is_tuple_like.hpp  is_variant.hpp  traits.hpp
include/utils/: ArgvIterator.hpp  dfs_get.hpp  dfs_holds_alternative.hpp  endian.hpp  file_resource.hpp  func_iterator.hpp  is_matchable.hpp  is_named.hpp  is_parsable.hpp  is_variant.hpp  null_sentinel.hpp  serialization.hpp  type_identity.hpp  typelist_dfs.hpp  variant_type_match.hpp
src/: CMakeLists.txt  TodoList.cpp  main.cpp
tests/: CMakeLists.txt  test.cpp  test_ArgvIterator.hpp
tests/cases/: includes.hpp  test_ArgvIterator.hpp  test_TokenIterator.hpp  tests.hpp
